
 XGngeo - Changelog
~~~~~~~~~~~~~~~~~~~~

* Changes in version 16 (2006-XX-XX):

- Improved ROM detection in the list (now directly based upon
Gngeo's scaning results).
- ROM list now supports multiple ROM directories.
- New integrated ROM driver editor (IN PROGRESS).
- Added possibility to select the new Universal BIOS.
- Better guessing of the default path to Gngeo's `romrc' file.
- Added possibility to choose XGngeo window to be centered on
the screen on start.
- Bugfix: no more problem in the Rom list with some PyGTK ins-
tallations. 
- Various GUI enhancements.
- Added checking for the PyGTK version (must be 2.6 or more).
- Minimum accepted Gngeo version setted to 0.6.11 (current :p).
- System-wide installation (using distutil) & per-user XGngeo
configuration.
- New German translation by Peter Kainrad.

* Changes in version 15 (2005-07-14):

- Big configuration panels reorganization with now 3 different
windows: ``Important paths" (which contains the required
parameters that have to be valid for a correct emultation),
``Global emulation" (which contains Neo Geo default emulation
options for all Roms) and ``Other things" (which mostly
contains XGngeo-specific parameters).
- Improvements on the Rom list window which now features, for
the first time in a Gngeo frontend ever, the possibility to set
Rom-specific emulation options! ^___^";
- Added a new ``Joystick" section, merged with the ``Audio"
one, where you can, among others, modify the joystick devices
used by the two players.
- Improved key configurator which, among others, now displays
the key names in place of their SDL values.
- Use of the new GTK+ file chooser for selecting files and
directories.
- Added support for the bigger windowed screen size and the
Raster effect options.
- Now preventing effect in the list from being selected when
the ``YUV" blitter (which does not support effect) is choosed.
- Display of a sort of progress bar indicating that the Rom