@@ -5,9 +5,11 @@
 * Changes in version 16 (2006-XX-XX):
 
 - Improved ROM detection in the list (now directly based upon
-Gngeo's scaning results).
+Gngeo's scaning results: faster and more accurate!).
 - ROM list now supports multiple ROM directories.
 - New integrated ROM driver editor (IN PROGRESS).
+- Visual indication of unavaible ROM and ability to remove
+entries in the History menu.
 - Added possibility to select the new Universal BIOS.
 - Better guessing of the default path to Gngeo's `romrc' file.
 - Added possibility to choose XGngeo window to be centered on
